packages/kyvernoPolicies/chart/tests/vpol/disallow-labels-cel/kyverno-test/resource.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-disallowed-key
  labels:
    kyverno-policies-bbtest/disallowed: "anything"
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod-key-value-match
  labels:
    kyverno-policies-bbtest/test: disallowed
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment-disallowed-key
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        kyverno-policies-bbtest/disallowed: "anything"
    spec:
      containers:
        - name: container01
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
###### Pods - Good
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-no-labels
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-unrelated-label
  labels:
    app.kubernetes.io/name: myapp
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod-key-value-mismatch
  labels:
    kyverno-policies-bbtest/test: allowed
spec:
  containers:
  - name: container01
    image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment-no-labels
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: container01
          image: registry1.dso.mil/ironbank/redhat/ubi/ubi9-micro:9.7
